--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="login-container" class="visible">
     <input type="text" id="username" placeholder="Nom d'utilisateur" />
     <input type="password" id="password" placeholder="Mot de passe" />
-    <button id="login-button">Connexion</button>
+    <button id="login-button">Conexion</button>
   </div>
 
   <div id="game-container" class="hidden">
