--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <input type="text" id="username" placeholder="Nom d'utilisateur" />
     <input type="password" id="password" placeholder="Mot de passe" />
     <button id="login-button">Conexion</button>
+    <button onclick="login()">Connexion</button>
   </div>
 
   <div id="game-container" class="hidden">
