--- a/index.html
+++ b/index.html
@@ -9,13 +9,6 @@
 <body>
   <h1>PixelTycoon</h1>
 
-  <div id="login-container" class="visible">
-    <input type="text" id="username" placeholder="Nom d'utilisateur" />
-    <input type="password" id="password" placeholder="Mot de passe" />
-    <button id="login-button">Conexion</button>
-    <button onclick="login()">Connexion</button>
-  </div>
-
   <div id="game-container" class="hidden">
     <div id="pixel-counter">Pixels : 0</div>
     <div>Production/sec : <span id="pps">0</span></div>
@@ -54,6 +47,7 @@
   </div>
 
   <script src="game.js"></script>
+  <script src="login.js"></script>
 </body>
 
 </html>
