--- a/index.html
+++ b/index.html
@@ -1,36 +1,18 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>PixelTycoon</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>PixelTycoon</h1>
 
-  <div id="game-container" class="hidden">
-    <div id="pixel-counter">Pixels : 0</div>
-    <div>Production/sec : <span id="pps">0</span></div>
-    <button id="click-button">+1 Pixel</button>
-
-    <h2>Améliorations</h2>
-    <button class="upgrade" data-index="0">Pixelateur (+1/s) - 10 Pixels</button>
-    <button class="upgrade" data-index="1">Usine à Pixels (+5/s) - 100 Pixels</button>
-    <button class="upgrade" data-index="2">Générateur 3000 (+20/s) - 1000 Pixels</button>
-  </div>
-
-  <script src="login.js" defer></script>
-  <script src="game.js" defer></script>
-</body>
-
-<body>
-  <h1>PixelTycoon</h1>
-
-  <div id="login-container" class="visible">
+  <div id="login-container">
     <input type="text" id="username" placeholder="Nom d'utilisateur">
     <input type="password" id="password" placeholder="Mot de passe">
-    <button onclick="login()">Connexion</button>
+    <button id="login-button">Connexion</button>
   </div>
 
   <div id="game-container" class="hidden">
@@ -46,8 +28,7 @@
     <button class="upgrade" onclick="buyUpgrade(2)">Générateur 3000 (+20/s) - 1000 Pixels</button>
   </div>
 
-  <script src="game.js"></script>
-  <script src="login.js"></script>
+  <script src="login.js" defer></script>
+  <script src="game.js" defer></script>
 </body>
-
 </html>
