--- a/index.html
+++ b/index.html
@@ -17,16 +17,17 @@
 
   <div id="game-container" class="hidden">
     <div id="pixel-display">Pixels : <span id="pixel-counter">0</span></div>
-    
-    <canvas id="game-canvas" width="320" height="320"></canvas>
+
+    <canvas id="game-canvas"></canvas>
 
     <div id="info-container">
       <div>Production/sec : <span id="pps">0</span></div>
       <button id="click-button">+1 Pixel</button>
     </div>
 
-    <h2>Améliorations des bâtiments</h2>
+    <h2>Améliorations et Construction</h2>
     <p>Clique sur un bâtiment pour l'améliorer (coût : 50 pixels)</p>
+    <button id="buy-building">Acheter un bâtiment (coût : 100 pixels)</button>
   </div>
 
   <script src="login.js" defer></script>
