--- a/index.html
+++ b/index.html
@@ -1,36 +1,25 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>PixelTycoon</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tycoon Solana</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>PixelTycoon</h1>
-
-  <div id="login-container">
-    <input type="text" id="username" placeholder="Nom d'utilisateur">
-    <input type="password" id="password" placeholder="Mot de passe">
-    <button id="login-button">Connexion</button>
-  </div>
-
-  <div id="game-container" class="hidden">
-    <div id="pixel-display">Pixels : <span id="pixel-counter">0</span></div>
-
-    <canvas id="game-canvas"></canvas>
-
-    <div id="info-container">
-      <div>Production/sec : <span id="pps">0</span></div>
-      <button id="click-button">+1 Pixel</button>
+    <div id="auth-container">
+        <input type="text" id="username" placeholder="Nom d'utilisateur">
+        <input type="password" id="password" placeholder="Mot de passe">
+        <button onclick="authenticate()">Connexion</button>
     </div>
 
-    <h2>Améliorations et Construction</h2>
-    <p>Clique sur un bâtiment pour l'améliorer (coût : 50 pixels)</p>
-    <button id="buy-building">Acheter un bâtiment (coût : 100 pixels)</button>
-  </div>
+    <div id="game-container" style="display: none;">
+        <button id="mine-btn">Miner du Solana</button>
+        <div id="map">
+            <!-- Les bâtiments seront ajoutés dynamiquement via JS -->
+        </div>
+    </div>
 
-  <script src="login.js" defer></script>
-  <script src="game.js" defer></script>
+    <script src="script.js"></script>
 </body>
 </html>
